# 30DayMapChallenge

./: .Rprofile  .gitignore  README.md  _header.html  _quarto.yml  about.qmd  gallery.qmd  generate_thumbnails.R  index.qmd  main.py  pyproject.toml  requirements.txt  styles.css  styles.scss
.github/workflows/: quarto-publish.yml
2025/: _metadata.yml  list_categories.md
2025/day_01/: day_01.qmd
2025/day_02/: day_02.qmd
2025/day_03/: data.csv  day_03.qmd
2025/day_03/agglo_communes/: AGGLO_COMMUNES.dbf  AGGLO_COMMUNES.shx
2025/day_04/: day_04.qmd
2025/day_05/: day_05.qmd
2025/day_06/: day_06.qmd
2025/day_07/: day_07.qmd
2025/day_08/: day_08.qmd
