[project]
name = "30daymapchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdx-python-api>=6.3.8",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "wbgapi>=1.0.12",
]
